update listener to fix issue on safari

--- a/src/components/Featured/featured.scss
+++ b/src/components/Featured/featured.scss
@@ -56,6 +56,14 @@
   background-color: #000000;
   height: 100vh;
   z-index: 90;
+
+  &__listener {
+    position: absolute;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    z-index: 1000;
+  }
 }
 .slide-item {
   position: absolute;
